Mon Feb  1 11:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
	Patch supplied by eric@skatter.usask.ca
	* Testing/nsscanner.m: Explicitly include NSString.h.
	Cleaned up autorelease pool handling.
	Fixed some printf arguments that didn't match their formats.
	Added tests for scanHexInt:.
	* Source/include/NSScanner.h:
	Add declarations for scanInt: and scanHexInt: methods.
	* Source/NSScanner.m Added scanHexInt: method.
	Cleaned up some comments.
	Added conditional compile to let scanDouble: accept numbers
	like 1.234eFoo (as 1.234).  For now, numbers like this are rejected.

Mon Feb  1 11:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSArray.m: ([-initWithContentsOfFile:]) Fixed memory leak.
	* src/NSDictionary.m: ([-initWithContentsOfFile:]) Fixed memory leak.
	* src/NSData.m: Tidied indentation and 64-bit clean serialization of
	strings, classes, and selectors.

Sat Jan 30  5:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Tidying up brain-damaged changes I made while ill.
	* src/NSConnection.m: Tidied proxy handling a bit
	* src/NSDistantObject.m: Tidied  - made closer to OpenStep spec.

Fri Jan 29 11:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/NSArchiver.m: Implemented ([-encodeDataObject:])
	* src/NSUnarchiver.m: Implemented ([-decodeDataObject])

1999-01-28  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile (SUBPROJECTS): Change directory names
	* configure.in: Update for new directories.

Thu Jan 28 16:45:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/include/NSObject.h: Preliminaries for addition of GC
	* src/include/NSZone.h: ditto
	* src/NSObject.m: ditto
	* src/NSZone.m: ditto

Thu Jan 28 11:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* src/include/GSConfig.h.in: Added gsaddr type - integer with same
	size as a pointer.
	* configure.in: Added gsaddr type and fixed a coiuple of typos.
	* src/NSUnarchiver.m: include NSByteOrder.h
