@@ -33,4 +33,4 @@ gstep-base, please diff against a version that has your previous patches.
 
 [I just threw these directions together.  If you have constructive
 suggestions for improving these directions, please send them to me.
-	mccallum@gnu.ai.mit.edu]
+	gnustep-maintainers@gnu.org]
