@@ -42,8 +42,8 @@
 #include <sys/time.h>
 #include <sys/param.h>
 #include <sys/socket.h>
-#include <arpa/inet.h>
 #include <netinet/in.h>
+#include <arpa/inet.h>
 #include <signal.h>
 #endif /* WIN32 */
 
