@@ -1,3 +1,14 @@
+1999-02-01  Adam Fedor  <fedor@gnu.org>
+
+	* Source/UnixFileHandle.m: Switch include of netinet/in.h.
+	* Source/NSObject.m: Undef ALIGN before define'ing.
+	* Source/NSZone.m: Likewise.
+	* Source/mframe/configure.in: Recognize any version of freebsd or
+	openbsd. 
+	* Source/mframe/i386/freebsd: New file, copy of generic.
+	* Source/mframe/i386/openbsd: Likewise. (Bug
+	reports from Michael Hanni <mhanni@sprintmail.com>).
+
 Mon Feb  1 11:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 	Patch supplied by eric@skatter.usask.ca
 	* Testing/nsscanner.m: Explicitly include NSString.h.
